# NER-in-docker

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gradio  Dockerfile.streamlit  Justfile  Makefile  README.md  _version.py  compare_flair_vs_llm.py  dev-requirements.txt  docker-compose-gpu.yml  docker-compose.yml  pyproject.toml  requirements-gradio.txt  requirements-streamlit.txt  requirements.txt  test_api_endpoints.py  test_llm_entities.py  update_schema.py
.github/workflows/: test.yml
research/: article_references_output.json  extract_article_ihrda.py  extract_article_references.py  extract_articles.py
src/: __init__.py  compare_flair_vs_llm.py  configuration.py  download_models.py  gradio_app.py  streamlit_app.py
src/adapters/: EntityPersistence.py  GroupPersistence.py  PDFLayoutAnalysisRepository.py  PersistenceReferenceDestination.py  SQLiteEntitiesStoreRepository.py  SQLitePDFsGroupNameRepository.py  __init__.py
src/domain/: BoundingBox.py  NamedEntitiesGrouped.py  NamedEntity.py  NamedEntityGroup.py  NamedEntityType.py  PDFNamedEntity.py  PDFSegment.py  Segment.py
src/drivers/: __init__.py  app.py
src/drivers/rest/: GroupResponse.py  NamedEntitiesResponse.py  NamedEntityResponse.py  PDFNamedEntitiesResponse.py  PDFNamedEntityResponse.py  SegmentResponse.py  __init__.py  app.py  catch_exceptions.py
src/gradio_ui/: api.py  constants.py  formatters.py
src/ner_in_docker/: configuration.py
src/ner_in_docker/adapters/: EntityPersistence.py  GeolocationRepository.py  PDFLayoutAnalysisRepository.py  PDFVisualizationRepository.py  PersistenceReferenceDestination.py  PostgresEntitiesStoreRepository.py  SQLiteEntitiesStoreRepository.py
src/ner_in_docker/domain/: BoundingBox.py  NamedEntity.py  NamedEntityGroup.py  NamedEntityType.py  PdfWord.py  Segment.py
src/ner_in_docker/drivers/: benchmark_groups.py
src/ner_in_docker/ports/: EntitiesStoreRepository.py  (+3 more)
src/port/: NameEntitiesPersistenceRepository.py
src/ports/: EntitiesStoreRepository.py  GroupNamePersistenceRepository.py  GroupsStoreRepository.py  PDFToSegmentsRepository.py  PDFsGroupNameRepository.py  __init__.py
src/use_cases/: GetFlairEntitiesUseCase.py  GetGLiNEREntitiesUseCase.py  GroupNamedEntitiesUseCase.py  NamedEntitiesFromPDFUseCase.py  NamedEntitiesFromTextUseCase.py  NamedEntitiesUseCase.py  NamedEntityMergerUseCase.py  PDFNamedEntityMergerUseCase.py  ReferenceEntitiesFromPDFUseCase.py  ReferencesUseCase.py  __init__.py
(+79 files in other folders)
